--- a/mi-aplicacion/src/pages/Properties/components/PropertyCart.css
+++ b/mi-aplicacion/src/pages/Properties/components/PropertyCart.css
@@ -64,7 +64,7 @@
 
 .property-card__info {
     padding: 1rem;
-    cursor: pointer;
+    /* cursor: pointer; */
     flex: 1;
     display: flex;
     flex-direction: column;
@@ -82,6 +82,7 @@
 .property-card__title {
     font-size: 1.5rem;
     font-weight: 400;
+    cursor: pointer;
     /* letter-spacing: 1px; */
     /* font-style: italic; */
     color: var(--dark-color);
@@ -90,6 +91,11 @@
     display: -webkit-box;
     -webkit-box-orient: vertical;
     overflow: hidden;
+    transition: opacity 0.3s ease;
+
+}
+.property-card__title:hover {
+    opacity: 0.7;
 }
 
 .property-card__features {
