--- a/mi-aplicacion/src/pages/LandingPage/components/CarouselLocation.css
+++ b/mi-aplicacion/src/pages/LandingPage/components/CarouselLocation.css
@@ -261,23 +261,11 @@
   }
 
   .carousel-navigation {
-    display: flex;
-    justify-content: right;
-    align-items: center;
-    gap: 20px;
-    margin-top: 20px;
-    position: absolute;
-    margin-right: 1.5rem;
-    bottom: 33rem;
-    left: 0;
-    right: 0;
+    display: none;
   }
 
   .carousel-button {
-    width: 40px;
-    height: 40px;
-    background-color: transparent;
-    border: 1px solid var(--light-color);
+    display: none;
   }
 
   .carousel-button svg {
@@ -322,20 +310,10 @@
   }
 
   .carousel-navigation {
-    display: flex;
-    justify-content: right;
-    align-items: center;
-    gap: 20px;
-    margin-top: 20px;
-    position: absolute;
-    margin-right: 1rem;
-    bottom: 35rem;
-    left: 0;
-    right: 0;
+    display: none;
   }
 
   .carousel-button {
-    width: 35px;
-    height: 35px;
+    display: none;
   }
 }
