--- a/mi-aplicacion/src/components/Header/HeaderPhone2.css
+++ b/mi-aplicacion/src/components/Header/HeaderPhone2.css
@@ -252,3 +252,12 @@
 .header-phone.white-section-active .hamburger-phone-button.active .hamburger-phone-line {
     background-color: var(--light-color); /* Ya está definido, pero lo mantenemos para claridad */
 }
+
+
+
+.no-scroll {
+    overflow: hidden;
+    height: 100%;
+    position: fixed;
+    width: 100%;
+}
