--- a/mi-aplicacion/src/pages/LandingPage/components/BuyHomes.css
+++ b/mi-aplicacion/src/pages/LandingPage/components/BuyHomes.css
@@ -9,7 +9,7 @@
 }
 
 .buyhomes-container {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.4)), url('/images/cocina2.jpg');
+    background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.4)), url('/images/salon.jpg');
     border-radius: 20% 20% 20% 20% / 50% 50% 50% 50%;
     overflow: hidden;
     background-size: cover;
