--- a/mi-aplicacion/src/pages/Properties/components/PropertyCart.css
+++ b/mi-aplicacion/src/pages/Properties/components/PropertyCart.css
@@ -108,6 +108,27 @@
     margin-right: 6px;
 }
 
+.property-card__price-indicator {
+    background-color: transparent;
+    color: var(--corporative-color); 
+    padding: 0;
+    font-size: 1rem;
+    font-weight: 300;
+    letter-spacing: 0.8px;
+    white-space: nowrap;
+    flex-shrink: 0;
+}
+
+/* .property-card__price-indicator::before {
+    content: "";
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    background-color: #4B8BAD;
+    border-radius: 50%;
+    margin-right: 6px;
+} */
+
 .property-card__location {
     color: var(--corporative-color);
     font-size: 0.9rem;
