--- a/mi-aplicacion/src/pages/Sell/Sell.css
+++ b/mi-aplicacion/src/pages/Sell/Sell.css
@@ -9,7 +9,7 @@
     margin-bottom: 0rem;
     text-align: center;
     background-color: transparent;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url('/images/edificio.jpg');
+    background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url('/images/salon3.jpg');
     background-size: cover;
     background-position: center 65%;
     width: 100%;
