--- a/mi-aplicacion/src/components/Footer/Footer.css
+++ b/mi-aplicacion/src/components/Footer/Footer.css
@@ -13,7 +13,6 @@
   background-color: var(--corporative-color);
   z-index: 3;
   margin-top: 0rem;
-  /* border-top: 1px solid white; */
 }
 
 .footer-content {
@@ -21,7 +20,6 @@
   flex-direction: row;
   flex: 1;
   border-top: 0.5px solid white;
-  /* margin-top: 3rem; */
 }
 
 .footer-image {
@@ -31,7 +29,9 @@
   text-align: flex-end;
   background-color: var(--corporative-color);
   padding-top: 4rem;
+  position: relative;
 }
+
 .logo-icon {
   display: flex;
   align-items: center;
@@ -69,13 +69,6 @@
   font-size: 0.8rem;
   font-weight: 100;
 }
-
-/* .footer-image h3 {
-  text-align: center;
-  margin-bottom: 2rem;
-  align-items: right;
-} */
-
 
 .footer-four a {
   text-decoration: none;
@@ -117,14 +110,14 @@
 }
 
 .footer-foot a {
-  color: inherit; /* Hereda el color del texto del padre (h3) */
-  text-decoration: none; /* Quita el subrayado predeterminado */
+  color: inherit; 
+  text-decoration: none;
   font-family: inherit;
   font-style: italic;
 }
 
 .footer-foot a:hover {
-  text-decoration: underline; /* Añade subrayado al pasar el cursor */
+  text-decoration: underline;
 }
 
 .footer-link, .footer-active-link {
@@ -146,7 +139,6 @@
   display: inline-block;
 }
 
-/* Si quieres mantener el estilo original de los párrafos */
 .interior-divs p {
   margin: 0.5rem 0;
 }
@@ -254,13 +246,48 @@
     text-align: center;
     justify-content: center;
   }
+
   .footer-four .first-child {
     margin-top: 1rem;
   }
 
   .footer-foot {
-    /* padding: 1.5rem 3rem; */
     display: flex;
     flex-direction: column-reverse;  }
 }
 
+
+.scroll-to-top-button {
+  position: absolute;
+  right: 3rem;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: transparent;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  font-size: 20px;
+  font-weight: 300;
+  color: var(--light-color);
+}
+
+/* Añadimos la flecha alargada */
+.scroll-to-top-button::after {
+  content: "↑";
+  display: block;
+  transform: scaleY(1.6); /* Flecha más alargada */
+  transition: transform 0.3s ease;
+}
+
+.scroll-to-top-button:hover {
+  transform: translateY(-60%);
+}
+
+.scroll-to-top-button:hover::after {
+  transform: scaleY(1.8); /* Se alarga aún más al hacer hover */
+}
